# pigeon

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pre-launch-audit-tiered.crew.json  pre-launch-audit.crew.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
.pigeon/: config.yaml  handoff.schema.json
.pigeon/memory/sessions/: stage2-agy-confirm-pointers-only.md  stage2-agy-pilot.md
benchmarks/: .private-map.template.json  KILL-CRITERION.md  PREREG-lever2-natural.md  PROTOCOL.md  PUBLIC-REPO-CRITERIA.md  README.md  REPORT-carrier-comms.md  REPORT.md  check-opsec.sh  report-improve.crew.json
benchmarks/exp4b-substrate/: CALIBRATION-RESULT.md  README.md  accept.py  pointers-only.tasks.json  with-derived-derive.tasks.json
benchmarks/exp4c-substrate/: README.md  RESULTS-stage1-calibration.csv  RESULTS-stage2-confirm.csv  TASK.md  accept.py  decoy.tasks.json  with-derived.tasks.json
benchmarks/exp5-substrate/: README.md  RESULTS-confirm-N12.csv  TASK.md  accept.py  pointers-only.tasks.json
benchmarks/figures/: make_carrier_comms_figures.py  make_figures.py  stats_appendix.py
benchmarks/manuscript/: README.md  carrier-comms-paper.md
benchmarks/results/: b2-router-ablation.json  b3-difficulty-calibration.json  lever1-sweep.json  lever2-3hop.json  lever2-deep-4c.json  lever2-natural.json  lever2-screen.json  stats-appendix.json
benchmarks/tasks/: t1-version-drift.md
docs/: MANUAL.md
docs/To_do/: adopt-p0-gate.tasks.yaml  adopt-p0.tasks.yaml  adopt-p1-build.tasks.yaml  comms-panel.tasks.yaml  full-audit.tasks.yaml  hardening-gate.tasks.yaml  resolve-untracked.tasks.yaml  sweep-untracked.tasks.yaml  timeout-salvage-build.tasks.yaml  timeout-salvage-design.tasks.yaml  timeout-salvage-gate.tasks.yaml  timeout-salvage-regate.tasks.yaml
docs/benchmarks/: .private-map.template.json  PROTOCOL.md  PUBLIC-CANDIDATES.md  README.md  REPORT-carrier-comms.md  REPORT.md  check-opsec.sh  report-improve.crew.json  report.md
docs/benchmarks/agy/: README.md
docs/benchmarks/exp4b-substrate/: README.md
docs/benchmarks/exp4c-substrate/: README.md
docs/benchmarks/figures/: make_carrier_comms_figures.py  make_figures.py  make_stage2_figures.py  make_stage3_1a_figures.py  make_stage5_figure.py  stats_appendix.py
docs/benchmarks/instruments/: build-stage1a-token-ledger.py  canonical-retokenize.py  prices.template.json  rederivable-probe.py  report-review-crew.json  run-stage1a-cost.sh  run-stage3-scale.sh  scale-generator.py
docs/benchmarks/manuscript/: README.md  carrier-comms-paper.md  paper.md
docs/benchmarks/preregistrations/: exp4c-deep-constraint.md  exp5-natural-substrate.md
docs/benchmarks/results/: b2-costaware-ledger.csv  b2-router-ablation.json  b3-calib-ledger.csv  b3-difficulty-calibration.json  cookiecutter.json  exp1-cost-marshmallow.json  exp2-cross-model.json  exp3-pack-sweep.json  exp4-residue-necessary.json  exp4-residue-screen.json  exp5-natural.json  lever2-deep-4c.json  lever2-natural.json  results.template.json  stage1a-cost-N8.csv  stage1a-cost.md  stage2-cross-model-report.md  stage3-scale.md  stage4-base-rate.md  stage5-deep-real-pilot.md
docs/benchmarks/tasks/: README.md
docs/benchmarks/tier-a/: check-opsec.sh  private-map.template.json  protocol.md  public-candidates.md  public-repo-criteria.md  report.md
docs/design/: EXP4B-revised-design.md  PLAN.md  README.md  adopt-buildplan.md  adopt-p1.md  carrier-comms-buildplan.md  carrier-comms.md  free-runner-harness.md  limitations-closing-buildplan.md  limitations-closing-status.md  timeout-salvage.md
docs/design/adopt/: buildplan.md  design.md  p1-contract.md
docs/design/carrier-comms/: brief.md  buildplan.md  exp4b-design.md
docs/design/panel-reviews/: critique-agy-gemini.md  critique-mimo.md
docs/design/remediation/: loop1.tasks.yaml  loop2.tasks.yaml
src/pigeon/: __init__.py  adopt.py  agents.py  bench_join.py  ci_report.py  cli.py  config.py  context.py  coordinate.py  distill.py  graph.py  handoff.py  init.py  manifest.py  mcp_server.py  pack.py  probe.py  resolve.py  retrieval.py  sessions.py  skills.py  tokens.py  tui.py
src/pigeon/coordinate/: __init__.py  reporting.py  router.py  routing.py  telemetry.py  (+1 more)
tests/: test_adopt.py  test_agents.py  test_bench_join.py  test_ci_report.py  test_cli.py  test_config.py  test_coordinate.py  test_derived.py  test_distill.py  test_graph.py  test_init.py  test_invariants.py  test_mcp_server.py  test_migrate.py  test_pack.py  test_probe.py  test_resolve.py  test_retrieval.py  test_router.py  test_routing_log.py  test_skills.py  test_tokens.py  test_version_consistency.py
(+140 files in other folders)
