[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carrier-pigeon"
version = "0.5.1"
description = "Carrier for cross-model agent context: canonical context, validated handoffs, parallel coordination, hybrid retrieval, distilled memory, token instrumentation. Formerly agentctx: canonical context, validated handoffs, hybrid retrieval, token instrumentation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Slartibartfast Lanning", email = "slartilabs@protonmail.com" }]
keywords = ["agents", "llm", "context-engineering", "handoff", "retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Quality Assurance",
    "Environment :: Console",
]

# Pinned (compatible-release) runtime deps. Kept to the minimum the
# acceptance checks require. ripgrep is shelled out, not a Python dep.
dependencies = [
    "jsonschema~=4.21",
    "rank-bm25~=0.2.2",
    "PyYAML~=6.0",
]

[project.optional-dependencies]
# Exact GPT tokenization. Without it, tokens.py uses a deterministic
# offline heuristic, so this is opt-in for byte-accurate counts.
tokens = ["tiktoken~=0.7"]
# Local vector retrieval (off by default; see .agentctx/config.yaml).
# No cloud: a local embedding model + a local store.
vector = ["chromadb~=0.5"]
# `pigeon mcp`: serve the contract over the Model Context Protocol so CLI
# agents (Claude Code, Codex, Gemini CLI, ...) call it as native tools.
mcp = ["mcp~=1.2"]
# `pigeon status --tui`: full-screen terminal dashboard (reader-only).
tui = ["textual~=8.0"]
dev = ["pytest~=8.0", "pytest-cov~=5.0", "mcp~=1.2", "textual~=8.0", "pyrefly~=1.0", "ruff~=0.6", "build~=1.2"]

[project.urls]
Homepage = "https://github.com/SlartiLabs/pigeon"
Repository = "https://github.com/SlartiLabs/pigeon"
Issues = "https://github.com/SlartiLabs/pigeon/issues"

[project.scripts]
pigeon = "pigeon.cli:main"
# legacy alias — the old name is deployed in existing projects
agentctx = "pigeon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pigeon = ["py.typed", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".pigeon", ".agentctx", ".venv"]

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes, I: import sort, UP: pyupgrade. No style rules that
# fight pyrefly or force a behaviour-changing rewrite.
select = ["E", "F", "I", "UP"]
# Ignored on purpose (this is a deliberately hand-formatted, bus-factor-1 repo):
#   E501 line-length is the formatter's job (we lint, we don't auto-reformat);
#   E402 lazy/conditional imports are used intentionally to avoid import cycles;
#   E741 short loop/comprehension names (`l`) in tests are fine.
ignore = ["E501", "E402", "E741"]

[tool.ruff.lint.per-file-ignores]
# coordinate/__init__.py re-exports its submodules' public API at the foot of the
# module (so `coordinate.<name>` stays stable for callers); those are deliberate,
# not dead imports.
"src/pigeon/coordinate/__init__.py" = ["F401"]

[tool.coverage.run]
source = ["src/pigeon"]
# The MCP serve layer and the TUI dashboard are integration surfaces (stdio
# server, full-screen terminal), exercised end-to-end rather than unit-tested;
# excluding them keeps the core coverage gate honest instead of vacuous.
omit = ["*/mcp_server.py", "*/tui.py"]

[tool.pyrefly]
project-includes = ["src", "tests"]
project-excludes = ["**/.venv", "**/__pycache__", "**/.pigeon", "**/.agentctx"]
# Optional extras are imported lazily behind friendly install hints
# (tokens.py / retrieval.py / mcp_server.py / tui.py); absence is a
# supported configuration, not a type error.
replace-imports-with-any = ["tiktoken", "chromadb", "boto3",
                            "tiktoken.*", "chromadb.*", "boto3.*"]

# Tests exercise dynamic JSON shapes and **kwargs helpers on purpose;
# keep src/ strict, relax only the inference-limit kinds in tests/.
[[tool.pyrefly.sub-config]]
matches = "tests/**"

[tool.pyrefly.sub-config.errors]
bad-index = false
bad-argument-type = false
unsupported-operation = false
missing-attribute = false   # MCP content unions, Optional[Match] in asserts
not-iterable = false        # `in` checks on manifest fields that may be None
